# Intro-to-Scientific-Computing-with-Python

./: .gitignore  README.md  index.qmd  pyproject.toml
01_intro_to_python/: intro_to_python.qmd  intro_to_python.quarto_ipynb
02_array_programming/: array_programming.qmd
03_exploratory_data_analysis/: exploratory_data_analysis_with_pandas_and_pingouin.qmd
03_tabular_data/: exploratory_data_analysis_with_pandas_and_pingouin.qmd  tabular_data.qmd
04_data_visualization/: data_visualization.qmd
assign/: index.ipynb
assign/01_intro_to_python/: intro_to_python.ipynb
assign/02_array_programming/: array_programming.ipynb
assign/03_exploratory_data_analysis/: exploratory_data_analysis_with_pandas_and_pingouin.ipynb
assign/03_tabular_data/: exploratory_data_analysis_with_pandas_and_pingouin.ipynb
assign/04_data_visualization/: data_visualization.ipynb
assign/solution/: index.out.ipynb
assign/solution/01_intro_to_python/: intro_to_python.out.ipynb
assign/solution/03_tabular_data/: tabular_data.out.ipynb  (+1 more)
lectures/01_intro_to_python/: 01_intro_to_python.html
lectures/02_multidimensional_arrays/: 02_multidimensional_arrays.html
lectures/03_tabular_data/: 03_tabular_data.html
lectures/04_data_visualization/: 04_data_visualization.html
solution/: index.ipynb
solution/01_intro_to_python/: intro_to_python.ipynb
solution/02_array_programming/: array_programming.ipynb
solution/03_tabular_data/: exploratory_data_analysis_with_pandas_and_pingouin.ipynb
solution/04_data_visualization/: data_visualization.ipynb
solution/assign/: index.out.ipynb
(+37 files in other folders)
