[project]
name = "intro-to-scientific-computing-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pingouin>=0.5.5",
    "pyqt5>=5.15.11",
    "seaborn>=0.13.2",
]
